ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: security-provider-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: security-provider.aks-dev.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: security-provider-clusterip
                port:
                  number: 80
